--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^3.0.43",
     "@ai-sdk/openai": "^3.0.28",
     "@deepgram/sdk": "^4.11.3",
     "@dnd-kit/core": "^6.3.1",
