--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.4",
     "driver.js": "^1.4.0",
+    "input-otp": "^1.4.2",
     "jspdf": "^4.1.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
