--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "recharts": "^2.15.4",
     "remark-gfm": "^4.0.1",
     "resend": "^6.9.2",
+    "sanitize-html": "^2.17.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0",
@@ -55,6 +56,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/sanitize-html": "^2.16.0",
     "@types/uuid": "^11.0.0",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
