feat: Introduce Progressive Web App support and provide comprehensive project documentation.

--- a/src/app/manifest.json
+++ b/src/app/manifest.json
@@ -1,6 +1,9 @@
 {
-  "name": "Rxly",
+  "name": "Rxly - AI Medical Consultation Assistant",
   "short_name": "Rxly",
+  "description": "Real-time AI-powered medical consultation assistant with live transcription and insights",
+  "start_url": "/",
+  "id": "/",
   "icons": [
     {
       "src": "/web-app-manifest-192x192.png",
@@ -13,9 +16,23 @@
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
+    },
+    {
+      "src": "/web-app-manifest-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/web-app-manifest-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
     }
   ],
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
-  "display": "standalone"
+  "display": "standalone",
+  "scope": "/",
+  "orientation": "portrait"
 }
