--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "driver.js": "^1.4.0",
     "input-otp": "^1.4.2",
     "jspdf": "^4.1.0",
+    "liquid-glass-react": "^1.1.1",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
