--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@medplum/core": "^5.0.14",
     "@medplum/fhirtypes": "^5.0.14",
     "@prisma/client": "^6.19.2",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.95.3",
     "@tabler/icons-react": "^3.36.1",
     "@tanstack/react-table": "^8.21.3",
+    "@types/three": "^0.183.0",
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "ai": "^6.0.78",
@@ -50,6 +53,7 @@
     "sanitize-html": "^2.17.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "three": "^0.183.0",
     "uuid": "^13.0.0",
     "vaul": "^1.1.2",
     "zod": "^4.3.6",
