--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dropzone": "^15.0.0",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^4.6.2",
+    "react-virtuoso": "^4.18.1",
     "recharts": "^2.15.4",
     "remark-gfm": "^4.0.1",
     "resend": "^6.9.2",
