--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.4",
     "driver.js": "^1.4.0",
+    "html2pdf.js": "^0.14.0",
     "input-otp": "^1.4.2",
     "jspdf": "^4.1.0",
     "liquid-glass-react": "^1.1.1",
